[gd_scene load_steps=19 format=3 uid="uid://d0xu7anv0knoc"]

[ext_resource type="Script" uid="uid://bae1hjmtyhc2e" path="res://game.gd" id="1_im2qt"]
[ext_resource type="Texture2D" uid="uid://brw3gomb3yml0" path="res://Dice.png" id="2_5oi1c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oyguh"]
atlas = ExtResource("2_5oi1c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_abfwi"]
atlas = ExtResource("2_5oi1c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwsbo"]
atlas = ExtResource("2_5oi1c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_reoxb"]
atlas = ExtResource("2_5oi1c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktr1g"]
atlas = ExtResource("2_5oi1c")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3g1r"]
atlas = ExtResource("2_5oi1c")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouy4g"]
atlas = ExtResource("2_5oi1c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp28u"]
atlas = ExtResource("2_5oi1c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nox0c"]
atlas = ExtResource("2_5oi1c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_54doj"]
atlas = ExtResource("2_5oi1c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_na0cm"]
atlas = ExtResource("2_5oi1c")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8nj2"]
atlas = ExtResource("2_5oi1c")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_615ms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyguh")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abfwi")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwsbo")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_reoxb")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktr1g")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3g1r")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouy4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp28u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nox0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54doj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na0cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8nj2")
}],
"loop": true,
"name": &"Roll",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_lk88d"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1500, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(437, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_iridn"]
resource_name = "Roll"
length = 3.0
step = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1500, -0.25, 0, 0.25, 0, 868, -0.25, 0, 0.25, 0, 722, -0.25, 0, 0.25, 0, 435, -0.25, 0, 0.25, 0, 102, -0.25, 0, 0.25, 0, 933, -0.25, 0, 0.25, 0, 583, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(437, -0.25, 0, 0.25, 0, 222, -0.25, 0, 0.25, 0, 362, -0.25, 0, 0.25, 0, 533, -0.25, 0, 0.25, 0, 299, -0.25, 0, 0.25, 0, 550, -0.25, 0, 0.25, 0, 328, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pt3t2"]
_data = {
&"RESET": SubResource("Animation_lk88d"),
&"Roll": SubResource("Animation_iridn")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_im2qt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1500, 437)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_615ms")
animation = &"Roll"
frame_progress = 0.714748

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pt3t2")
}

[node name="Roll" type="Button" parent="."]
offset_left = 1.0
offset_top = 540.0
offset_right = 333.0
offset_bottom = 646.0
theme_override_font_sizes/font_size = 50
text = "Roll"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Bet" type="LineEdit" parent="."]
offset_left = 338.0
offset_top = 541.0
offset_right = 700.0
offset_bottom = 647.0
theme_override_font_sizes/font_size = 50
placeholder_text = "Your Bet Here"

[node name="Bet2" type="LineEdit" parent="."]
offset_left = 333.0
offset_top = 435.0
offset_right = 695.0
offset_bottom = 541.0
theme_override_font_sizes/font_size = 50
placeholder_text = "Wager"

[node name="Label" type="Label" parent="."]
offset_left = 4.0
offset_top = 396.0
offset_right = 334.0
offset_bottom = 537.0
theme_override_font_sizes/font_size = 50
text = "Your 
Balance:"

[node name="Label" type="Label" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.553
anchor_bottom = 0.5
offset_left = 209.0
offset_top = 73.0
offset_right = 158.51
offset_bottom = 92.5
theme_override_font_sizes/font_size = 50
text = "Num"

[connection signal="pressed" from="Roll" to="." method="_on_roll_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
